--- a/sam-ssm/example.yaml
+++ b/sam-ssm/example.yaml
@@ -1,13 +1,22 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Transform: AWS::Serverless-2016-10-31
+Transform: 'AWS::Serverless-2016-10-31'
+Description: An AWS Serverless Specification template describing your function.
 Resources:
-  TestFunction:
-    Type: AWS::Serverless::Function
+  SSMLAMBDA:
+    Type: 'AWS::Serverless::Function'
     Properties:
-      Handler: index.handler
+      Handler: lambda_function.lambda_handler
       Runtime: python3.6
+      CodeUri: .
+      Description: ''
+      MemorySize: 128
+      Timeout: 3
+      Role: 'arn:aws:iam::712115679703:role/Lambda-ssm-ec2'
       Events:
-        stream:
+        SNS:
           Type: SNS
           Properties:
-            Topic: arn:aws:sns:ap-south-1:712115679703:test
+            Topic:
+              Ref: SNSTopic
+  SNSTopic:
+    Type: 'AWS::SNS::Topic'
