--- a/sam-ssm/example.yaml
+++ b/sam-ssm/example.yaml
@@ -5,7 +5,7 @@ Resources:
   SSMLAMBDA:
     Type: 'AWS::Serverless::Function'
     Properties:
-      Handler: lambda_function.lambda_handler
+      Handler: index.handler
       Runtime: python3.6
       CodeUri: .
       Description: ''
