--- a/sam-ssm/example.yaml
+++ b/sam-ssm/example.yaml
@@ -2,9 +2,10 @@ AWSTemplateFormatVersion: '2010-09-09'
 Transform: 'AWS::Serverless-2016-10-31'
 Description: An AWS Serverless Specification template describing your function.
 Resources:
-  SSMLAMBDA:
+  SSM:
     Type: 'AWS::Serverless::Function'
     Properties:
+      FunctionName: !Sub "${AWS::StackName}-SSM"
       Handler: index.handler
       Runtime: python3.6
       CodeUri: .
