--- a/sam-ssm/example.yaml
+++ b/sam-ssm/example.yaml
@@ -6,6 +6,7 @@ Resources:
     Type: 'AWS::Serverless::Function'
     Properties:
       FunctionName: !Sub "${AWS::StackName}-SSM"
+      AutoPublishAlias: live
       Handler: index.handler
       Runtime: python3.6
       CodeUri: .
