--- a/sam-ssm/example.yaml
+++ b/sam-ssm/example.yaml
@@ -22,3 +22,6 @@ Resources:
               Ref: SNSTopic
   SNSTopic:
     Type: 'AWS::SNS::Topic'
+    Properties:
+      Subscription:
+        Endpoint: !Ref SSM
