--- a/sam-ssm/example.yaml
+++ b/sam-ssm/example.yaml
@@ -16,16 +16,17 @@ Resources:
       Role: 'arn:aws:iam::712115679703:role/Lambda-ssm-ec2'
       DeploymentPreference:
         Type: AllAtOnce
-      Events:
-        SNS:
-          Type: SNS
-          Properties:
-            Topic:
-              Ref: SNSTopic
+      #Events:
+       # SNS:
+        #  Type: SNS
+         # Properties:
+          #  Topic:
+           #   Ref: SNSTopic
+           
   SNSTopic:
     Type: 'AWS::SNS::Topic'
     Properties:
-      Environment:
-        Variables:
-          CurrentVersion: !Ref SSM.Version
+      Subscription:
+        - Protocol: lambda
+          Endpoint: !GetAtt SSM..Arn
     
