--- a/sam-ssm/example.yaml
+++ b/sam-ssm/example.yaml
@@ -26,7 +26,7 @@ Resources:
     Type: 'AWS::SNS::Topic'
     Properties:
       DisplayName: SNSTopic
-      subscription:
-        protocol: lambda
+      Subscription:
+        Protocol: lambda
         Endpoint: !Ref SSM
     
