--- a/sam-ssm/example.yaml
+++ b/sam-ssm/example.yaml
@@ -6,7 +6,7 @@ Resources:
     Type: 'AWS::Serverless::Function'
     Properties:
       FunctionName: 'SSM'
-      AutoPublishAlias: !Sub '${AWS::StackName}'
+      AutoPublishAlias: 123
       Handler: index.handler
       Runtime: python3.6
       CodeUri: .
