--- a/sam-ssm/example.yaml
+++ b/sam-ssm/example.yaml
@@ -22,6 +22,14 @@ Resources:
           Properties:
             Topic: !Ref SNSTopic
   
+  SSMVersion:
+    Type: "AWS::Lambda::Alias"
+    Properties:     
+      Description: Create an alias for previous version         
+      FunctionName: !Ref SSM
+      FunctionVersion:
+      Name: Dev
+  
   SNSTopic:
     Type: 'AWS::SNS::Topic'
     Properties:
