--- a/sam-ssm/example.yaml
+++ b/sam-ssm/example.yaml
@@ -5,7 +5,7 @@ Resources:
   SSM:
     Type: 'AWS::Serverless::Function'
     Properties:
-      FunctionName: SSM
+      FunctionName: SSM:$LATEST
       AutoPublishAlias: prod
       Handler: index.handler
       Runtime: python3.6
@@ -22,13 +22,7 @@ Resources:
           Properties:
             Topic: !Ref SNSTopic
   
-  SSMVersion:
-    Type: "AWS::Lambda::Alias"
-    Properties:     
-      Description: Create an alias for previous version         
-      FunctionName: !Ref SSM
-      FunctionVersion:
-      Name: Dev
+  
   
   SNSTopic:
     Type: 'AWS::SNS::Topic'
