--- a/sam-ssm/example.yaml
+++ b/sam-ssm/example.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: 2010-09-09
 Transform: 'AWS::Serverless-2016-10-31'
-Description: An AWS Serverless Specification template describing your function.
+Description: AWS Serverless Specification template describing your function.
 Resources:
   SSM:
     Type: 'AWS::Serverless::Function'
