--- a/sam-ssm/example.yaml
+++ b/sam-ssm/example.yaml
@@ -1,3 +1,5 @@
+# SAM Template to deploy Lambda function with Versions
+
 AWSTemplateFormatVersion: 2010-09-09
 Transform: 'AWS::Serverless-2016-10-31'
 Description: AWS Serverless Specification template describing your function.
